--- a/public/index.html
+++ b/public/index.html
@@ -339,6 +339,9 @@
         <label for="email">Work Email:</label>
         <input type="email" id="email" required>
     </div>
+    <div class="alert">
+      <div>Please Note: Only your first response will be considered in the event of multiple entries.</div>
+    </div>
 
     <button id="submitBtn">Submit</button>
   </div>
